--- a/package.json
+++ b/package.json
@@ -3,19 +3,20 @@
   "version": "1.0.0",
   "description": "a graphql server",
   "repository": "https://github.com/hillscottc/datahub",
-  "main": "server.js",
+  "main": "server",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "babel-node server.js"
+    "start": "babel-node server"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.15.2",
     "bookshelf": "^0.10.2",
+    "debug": "^2.3.2",
     "express": "^4.14.0",
-    "express-graphql": "^0.6.1",
-    "graphql": "^0.8.2",
     "knex": "^0.12.6",
+    "morgan": "^1.7.0",
     "pg": "^6.1.0"
   },
   "devDependencies": {
