--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "1.0.0",
   "description": "a graphql server",
   "repository": "https://github.com/hillscottc/datahub",
-  "main": "server",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "babel-node server"
+    "start": "babel-node src/server",
+    "start:prod": "node dist/server",
+    "build": "babel src -d dist --presets es2015,stage-2"
   },
   "author": "",
   "license": "ISC",
@@ -22,6 +23,7 @@
   "devDependencies": {
     "babel-cli": "^6.18.0",
     "babel-preset-es2015": "^6.18.0",
-    "babel-preset-stage-2": "^6.18.0"
+    "babel-preset-stage-2": "^6.18.0",
+    "nodemon": "^1.11.0"
   }
 }
