--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "repository": "https://github.com/hillscottc/datahub",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "babel-node src/server",
+    "start": "nodemon src/server --exec babel-node",
     "start:prod": "node dist/server",
     "build": "babel src -d dist --presets es2015,stage-2"
   },
