--- a/package.json
+++ b/package.json
@@ -9,12 +9,11 @@
     "start:prod": "node dist/server",
     "build": "babel src -d dist --presets es2015,stage-2"
   },
-  "author": "",
+  "author": "Scott Hill",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.15.2",
     "bookshelf": "^0.10.2",
-    "debug": "^2.3.2",
     "express": "^4.14.0",
     "knex": "^0.12.6",
     "morgan": "^1.7.0",
