--- a/package.json
+++ b/package.json
@@ -3,12 +3,6 @@
   "version": "1.0.0",
   "description": "a graphql server",
   "repository": "https://github.com/hillscottc/datahub",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon src/server --exec babel-node",
-    "start:prod": "node dist/server",
-    "build": "babel src -d dist --presets es2015,stage-2"
-  },
   "author": "Scott Hill",
   "license": "ISC",
   "dependencies": {
@@ -17,12 +11,24 @@
     "express": "^4.14.0",
     "knex": "^0.12.6",
     "morgan": "^1.7.0",
-    "pg": "^6.1.0"
+    "pg": "^6.1.0",
+    "query-string": "^4.2.3"
   },
   "devDependencies": {
     "babel-cli": "^6.18.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-stage-2": "^6.18.0",
-    "nodemon": "^1.11.0"
+    "csv-parse": "^1.1.7",
+    "mocha": "^3.1.2",
+    "nodemon": "^1.11.0",
+    "rimraf": "^2.5.4",
+    "should": "^11.1.1",
+    "supertest": "^2.0.1"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon src/server --exec babel-node",
+    "start:prod": "node dist/server",
+    "build": "babel src -d dist --presets es2015,stage-2"
   }
 }
