--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "datahub",
   "version": "1.0.0",
-  "description": "a graphql server",
+  "description": "an express data api server",
   "repository": "https://github.com/hillscottc/datahub",
   "author": "Scott Hill",
   "license": "ISC",
@@ -15,9 +15,11 @@
     "query-string": "^4.2.3"
   },
   "devDependencies": {
+    "assert": "^1.4.1",
     "babel-cli": "^6.18.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-stage-2": "^6.18.0",
+    "babel-register": "^6.18.0",
     "csv-parse": "^1.1.7",
     "mocha": "^3.1.2",
     "nodemon": "^1.11.0",
@@ -26,7 +28,7 @@
     "supertest": "^2.0.1"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha --compilers js:babel-register ",
     "start": "nodemon src/server --exec babel-node",
     "start:prod": "node dist/server",
     "build": "babel src -d dist --presets es2015,stage-2"
