--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Scott Hill",
   "license": "ISC",
   "dependencies": {
+    "bluebird": "^3.4.6",
     "body-parser": "^1.15.2",
     "bookshelf": "^0.10.2",
     "express": "^4.14.0",
