--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bookshelf": "^0.10.2",
     "express": "^4.14.0",
     "knex": "^0.12.6",
+    "moment": "^2.17.1",
     "morgan": "^1.7.0",
     "pg": "^6.1.0",
     "query-string": "^4.2.3"
